# zetacore

./: .gitignore  Cargo.toml  MANIFEST.in  README.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: build_and_publish.yml
benches/: add_benchmark.rs  delete_benchmark.rs  get_benchmark.rs  query_benchmark.rs
benches/common/: mod.rs
src/: bindings.rs  lib.rs  record.rs  vector_store.rs
tests/: integration_tests.rs
