[package]
name = "holocron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rand = "0.8"
criterion = "0.3"

[[bench]]
name = "query_benchmark"
harness = false

[[bench]]
name = "add_benchmark"
harness = false

[[bench]]
name = "get_benchmark"
harness = false

[[bench]]
name = "delete_benchmark"
harness = false

