[package]
name = "holocron"
version = "0.0.6"
edition = "2021"

[lib]
name = "holocron"
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = "1.0"
pyo3 = { version = "0.22", features = ["extension-module"] }

[dev-dependencies]
rand = "0.8"
criterion = "0.3"

[[bench]]
name = "query_benchmark"
harness = false

[[bench]]
name = "add_benchmark"
harness = false

[[bench]]
name = "get_benchmark"
harness = false

[[bench]]
name = "delete_benchmark"
harness = false

