[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "zetacore"
version = "0.1.0"
authors = [
  {name = "zenithvrx"},
]
requires-python = ">=3.7"
description = "A simple in-memory vector store library."
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["LLM", "vector-store", "similarity-search", "python-bindings"]

[project.urls]
Homepage = "https://github.com/zenithvrx/zetacore"
Bug Tracker = "https://github.com/zenithvrx/zetacore/issues"


[tool.maturin]
features = ["pyo3/extension-module"]
